# Kids-Pixel-Pals

./: .env.example  DOCKER-README.md  UI_DESIGN_GUIDE.md  docker-compose.yml  start-dev.sh
Spec/: README.md  admin-control-spec.md  auth-spec.md  backend-spec.md  billing-spec.md  chat-spec.md  frontend-spec.md  integration-spec.md  language-monitoring-spec.md  live-gameplay-spec.md  main-spec.md  onboarding-spec.md  parental-oversight-spec.md  profile-spec.md  screenshots-spec.md  video-calling-spec.md
backend/: .env.example  DATABASE_SCHEMA.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  simple_db_test.py  test_db.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  security.py  websocket.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/models/: __init__.py  audit.py  chat.py  message.py  user.py
backend/app/routes/: auth.py  profile.py  websocket.py
backend/app/schemas/: auth.py  profile.py
backend/app/services/: auth.py
backend/app/websockets/: chat.py
backend/migrations/: env.py
frontend/: package.json  tailwind.config.js
frontend/src/app/: globals.css  page.tsx
frontend/src/app/components/: ChatInterface.tsx  Navigation.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
